# aegis-memory

./: .env.example  .gitignore  READINESS.md  README.md  SYSTEM_PROMPT.md  docker-compose.yml  pyproject.toml  sbom.json
examples/: bridge.py
scripts/: generate_sbom.py
tests/: test_cloud_config.py  test_full_cycle.py  test_hallucination_guard.py  test_recall.py
tripartite_memory/: core.py  types.py
tripartite_memory/engines/: base.py  ledger.py  relational.py  semantic.py
