[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tripartite-memory"
version = "0.1.4"
description = "The official AEGIS OS Tripartite Memory SDK for Autonomous Agents."
readme = "README.md"
authors = [
  { name = "LavaLabs", email = "founders@lavalabs.ai" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["aegis", "memory", "llm", "agents", "neo4j", "qdrant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "qdrant-client>=1.7.0",
    "neo4j>=5.14.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "cyclonedx-bom>=4.0.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/lavalabs/aegis-memory"
Documentation = "https://github.com/lavalabs/aegis-memory#readme"
Repository = "https://github.com/lavalabs/aegis-memory.git"
